sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: not found: value cuseur
		if(plusPetit(curseur-1,cuseur) && plusPetit(curseur,curseur+1))
                                       ^