sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var curseur:Int = getNombreValeurs()-1;
	var hasSwap: Boolean = false;
	do
	{
		hasSwap = false;
		if(plusPetit(curseur-1,cuseur) && plusPetit(curseur,curseur+1))
			{
				curseur=curseur-1;
			}
		else{
			echange(curseur+1,curseur-1);
			hasSwap = true;
			curseur = curseur-1;
			
		}
	}while(hasSwap && curseur ==1)
	
}
